# GeneralNumberSystems

./: README.md
cmake_templates/: doxygen_extension.cmake  grph_CMakeLists.txt  lib_CMakeLists.txt  test_CMakeLists.txt
doxygen_templates/: Doxyfile  Doxyfile.cmake
libraries/: builder.sh  install.sh
libraries/Exceptions/: CMakeLists.txt  config.h.in
libraries/Exceptions/docs/: Doxyfile.cmake
libraries/Exceptions/header/: encryptexception.h  exception.h  exceptionsconfig.h  ioexception.h  mathexception.h  netexception.h  notexistsintegralexception.h  overflowexception.h  parameterexception.h  parserexception.h  runtimeexception.h  wrongdimensionexception.h
libraries/Exceptions/test/: CMakeLists.txt
libraries/MATH/projects/Algebra/: Algebra.kdev4  CMakeLists.txt  config.h.in
libraries/MATH/projects/Algebra/.kdev4/: Algebra.kdev4
libraries/MATH/projects/Algebra/docs/: Doxyfile.cmake
libraries/MATH/projects/Algebra/header/: algebraconfig.h  complex.h  expansionutil.h  fieldexpansion.h  fieldexpansion.hpp  gcd.h  gcd.hpp  idealadicrepresentation.h  idealadicrepresentation.hpp  integer.h  integer.hpp  integertypes.h  karatsuba.h  karatsuba.hpp  lehmerschur.h  lehmerschur.hpp  number_traits.h  number_traits.hpp  number_traits_complex.h  number_traits_complex.hpp  number_traits_fieldexpansion.h  number_traits_idealadic.h  number_traits_idealadic.hpp  number_traits_padicshape.h  number_traits_polynomial.h  number_traits_polynomial.hpp  number_traits_quotientfield.h  number_traits_quotientfield.hpp  number_traits_spec.h  numbercalculator.h  numbercalculator.hpp  numbercalculator_complex.h  numbercalculator_complex.hpp  numbercalculator_fieldexpansion.h  numbercalculator_fieldexpansion.hpp  numbercalculator_idealadicrep.h  numbercalculator_idealadicrep.hpp  numbercalculator_padicshape.h  numbercalculator_polynomial.h  numbercalculator_quotientfield.h  (+12 more)
libraries/MATH/projects/Algebra/test/: CMakeLists.txt  ExpansionUtilTest.cpp  config.h.in  test.kdev4
libraries/MATH/projects/Algebra/test/.kdev4/: test.kdev4
libraries/MATH/projects/Algebra/test/header/: ComplexTest.h  ExpansionUtilTest.h  GcdTest.h  IdealAdicRepresentationTest.h  IntegerTest.h  KaratsubaTest.h  LehmerSchurTest.h  NumberCalculatorTest.h  PAdicTest.h  PolynomialTest.h  QuotientFieldTest.h  RussionPeasantMethodTest.h  algebratestconfig.h
libraries/MATH/projects/Algebra/test/source/: ComplexTest.cpp  ExpansionUtilTest.cpp  GcdTest.cpp  IdealAdicRepresentationTest.cpp  IntegerTest.cpp  KaratsubaTest.cpp  LehmerSchurTest.cpp  NumberCalculatorTest.cpp  PAdicTest.cpp  PolynomialTest.cpp  QuotientFieldTest.cpp  RussionPeasantMethod.cpp  main.cpp  run_ComplexTest._cpp_  run_ExpansionUtilTest._cpp_  run_GcdTest._cpp_  run_IdealAdicRepresentation._cpp_  run_IntegerTest._cpp_  run_KaratsubaTest._cpp_  run_LehmerSchurTest._cpp_  run_NumberCalculatorTest._cpp_  run_PAdicTest._cpp_  run_PolynomialTest._cpp_  run_QuotientFieldTest._cpp_  run_RussionPeasantMethod._cpp_
libraries/MATH/projects/Graphs/: CMakeLists.txt  config.h.in
libraries/MATH/projects/Graphs/docs/: Doxyfile.cmake
libraries/MATH/projects/Graphs/header/: abstractbfs.h  abstractdfs.h  edge.h  forest.h  graphsconfig.h  igraph.h  itree.h  linkedgraph.h  linkednode.h  linkedtree.h  (+2 more)
libraries/MATH/projects/Graphs/test/: CMakeLists.txt  config.h.in
libraries/MATH/projects/Graphs/test/header/: ForestTest.h  LinkedGraphTest.h  ReverseTreeTest.h  graphstestconfig.h
libraries/MATH/projects/Graphs/test/source/: ForestTest.cpp  LinkedGraphTest.cpp  ReverseTreeTest.cpp  main.cpp  run_ForestTest._cpp_  run_LinkedGraphTest._cpp_  run_ReverseTreeTest._cpp_
libraries/MATH/projects/LinearAlgebra/: CMakeLists.txt  config.h.in
libraries/MATH/projects/LinearAlgebra/docs/: Doxyfile.cmake
libraries/MATH/projects/LinearAlgebra/header/: abstractmatrixform.h  abstractmatrixform.hpp  adjointmatrix.h  adjointmatrix.hpp  adjointmatrix_traits.bak  converter.h  converter.hpp  euclideannorm.h  euclideannorm.hpp  linearalgebraconfig.h  matrix.h  matrix.hpp  matrix_traits.h  matrix_traits.hpp  matrixcalculator.h  matrixcalculator.hpp  matrixcalculator_spec.h  matrixcalculator_spec.hpp  pnorm.h  pnorm.hpp  smithnormalform.h  smithnormalform.hpp  smithnormalform.old  vector.h  vector.hpp  vector_traits.h  vector_traits.hpp  vectorcalculator.h  vectorcalculator.hpp
libraries/MATH/projects/LinearAlgebra/source/: adjointmatrix_traits.bak
libraries/MATH/projects/LinearAlgebra/test/: CMakeLists.txt  config.h.in
libraries/MATH/projects/LinearAlgebra/test/header/: AdjointMatrixTest.h  ConverterTest.h  EuclideanNormTest.h  MatrixCalculatorTest.h  MatrixTest.h  Matrix_traitsTest.h  PNormTest.h  SmithNormalFormTest.h  VectorTest.h  Vector_traitsTest.h  linearalgebratestconfig.h
libraries/MATH/projects/LinearAlgebra/test/source/: AdjointMatrixTest.cpp  ConverterTest.cpp  EuclideanNormTest.cpp  MatrixCalculatorTest.cpp  MatrixTest.cpp  Matrix_traitsTest.cpp  PNormTest.cpp  SmithNormalFormTest.cpp  VectorTest.cpp  Vector_traitsTest.cpp  main.cpp  run_AdjointMatrixTest._cpp_  run_ConverterTest._cpp_  run_EuclideanNormTest._cpp_  run_MatrixCalculatorTest._cpp_  run_MatrixTest._cpp_  run_Matrix_traitsTest._cpp_  run_PNormTest._cpp_  run_SmithNormalFormTest._cpp_  run_VectorTest._cpp_  run_Vector_traitsTest._cpp_
libraries/MATH/projects/NumberSystem/: CMakeLists.txt  config.h.in
libraries/MATH/projects/NumberSystem/test/: CMakeLists.txt  config.h.in
libraries/MATH/projects/NumberSystem/test/header/: EscapeAlgorithmTest.h  NumberSystemTest.h  PECalculatorTest.h  PECalculatorTest.hpp  numbersystemtestconfig.h
libraries/MATH/projects/NumberSystem/test/source/: EscapeAlgorithmTest.cpp  NumberSystemTest.cpp  main.cpp  run_EscapeAlgorithm._cpp_  run_NumberSystemTest._cpp_
libraries/Tester/: CMakeLists.txt  Makefile  config.h.in
libraries/Tester/header/: testcase.h  testerconfig.h
libraries/Tester/source/: testcase.cpp
scripts/: builder.sh  clean.pl  create_body.pl  create_doksi.pl  create_main.pl  create_release.sh  create_run.pl  create_tempfile.pl  install  setBaseDir.pl
(+19 files in other folders)
